--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but luna-pizza-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <!--<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac9e5ad80f3585a671a1cf6e750f33a5e377b1026d84aff3d8c44bd9661bd7365&amp;width=1280&amp;height=600&amp;lang=ru_RU&amp;scroll=true"></script>-->
     <!-- built files will be auto injected -->
   </body>
 </html>
