--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>luna-pizza-project</title>
+    <title>Пицца-бар ЛУНА / Пиццы</title>
   </head>
   <body>
     <noscript>
       <strong>Сайт Луна Пицца не работает с отключённым JavaScript. Пожалуйста, включите его в настройках браузера и обновите страницу.</strong>
     </noscript>
     <div id="app"></div>
-    <!--<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac9e5ad80f3585a671a1cf6e750f33a5e377b1026d84aff3d8c44bd9661bd7365&amp;width=1280&amp;height=600&amp;lang=ru_RU&amp;scroll=true"></script>-->
-    <!-- built files will be auto injected -->
   </body>
 </html>
